# tuple-morph

./: tuple-morph.cabal
Data/Tuple/: Morph.hs
Data/Tuple/Morph/: Append.hs  TH.hs
